# ironic-inspector

./: .gitignore  .gitreview  .travis.yml  CONTRIBUTING.rst  HTTP-API.rst  MANIFEST.in  Makefile  README.md  README.rst  RELEASES.rst  bindep.txt  config-generator.conf  discoverd.py  example.conf  ironic-discoverd.8  ironic-inspector.8  lower-constraints.txt  plugin-requirements.txt  policy.yaml.sample  requirements.txt  rootwrap.conf  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  introspection-api-v1-continue.inc  introspection-api-v1-introspection-management.inc  introspection-api-v1-introspection.inc  introspection-api-v1-rules.inc  introspection-api-versions.inc  parameters.yaml
devstack/: discovery_exercise.sh  example.local.conf  exercise.sh  exercise_common.sh  plugin.sh  settings
devstack/upgrade/: settings  shutdown.sh  upgrade.sh
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  http-api.rst  index.rst  install.rst  troubleshooting.rst  upgrade.rst  usage.rst  workflow.rst
functest/: devstack-test.sh  run.py
functest/env/: cpuinfo.txt  dmidecode  fdisk  get_kernel_parameter  ip  ipmitool  lscpu  troubleshoot
ironic-inspector/locale/: ironic-inspector-log-critical.pot  ironic-inspector-log-error.pot  ironic-inspector-log-info.pot  ironic-inspector-log-warning.pot  ironic-inspector.pot
ironic_discoverd/: __init__.py  __main__.py  client.py  conf.py  discover.py  discoverd.py  firewall.py  introspect.py  main.py  node_cache.py  process.py  shell.py  test.py  utils.py
ironic_discoverd/common/: i18n.py
ironic_discoverd/plugins/: base.py  edeploy.py  example.py  root_device_hint.py  scheduler.py  standard.py  validate_interfaces.py
ironic_discoverd/test/: __init__.py  base.py  test_client.py  test_discover.py  test_firewall.py  test_introspect.py  test_main.py  test_node_cache.py  test_plugins_edeploy.py  test_plugins_root_device_hint.py  test_plugins_standard.py  test_process.py  test_utils.py
ironic_discoverd_ramdisk/: discover.py  main.py
ironic_discoverd_ramdisk/test/: test_discover.py  test_main.py
ironic_inspector/: __init__.py  api_tools.py  client.py  conf.py  db.py  dbsync.py  firewall.py  introspect.py  introspection_state.py  known_accelerators.yaml  main.py  models.py  node_cache.py  policy.py  process.py  rules.py  shell.py  utils.py  wsgi_service.py
ironic_inspector/cmd/: __init__.py  all.py  conductor.py  dbsync.py  migration.py  status.py  wsgi.py
ironic_inspector/common/: auth_basic.py  coordination.py  device_hints.py  exception.py  i18n.py  ironic.py  keystone.py  lldp_parsers.py  lldp_tlvs.py  locking.py  mdns.py  rpc.py  service_utils.py  swift.py
ironic_inspector/conductor/: manager.py
ironic_inspector/conf/: __init__.py  accelerators.py  coordination.py  default.py  discovery.py  exception.py  extra_hardware.py  healthcheck.py  iptables.py  ironic.py  mdns.py  opts.py  port_physnet.py  processing.py  pxe_filter.py  swift.py
ironic_inspector/db/: __init__.py  api.py  migration.py  model.py
ironic_inspector/migrations/: env.py  script.py.mako
ironic_inspector/plugins/: accel_device.py  base.py  base_physnet.py  capabilities.py  discovery.py  edeploy.py  example.py  extra_hardware.py  introspection_data.py  lldp_basic.py  local_link_connection.py  pci_devices.py  physnet_cidr_map.py  raid_device.py  root_device_hint.py  rules.py  standard.py
ironic_inspector/pxe_filter/: base.py  dnsmasq.py  interface.py  iptables.py
ironic_inspector/test/: __init__.py  base.py  functional.py  test_client.py  test_common_ironic.py  test_firewall.py  test_introspect.py  test_keystone.py  test_main.py  test_migrations.py  test_node_cache.py  test_plugins_discovery.py  test_plugins_edeploy.py  test_plugins_extra_hardware.py  test_plugins_raid_device.py  test_plugins_root_device_hint.py  test_plugins_rules.py  test_plugins_standard.py  test_process.py  test_rules.py  test_swift.py  test_utils.py
ironic_inspector/wsgi/: __init__.py
ironic_inspector_ramdisk/: discover.py  main.py
ironic_inspector_ramdisk/test/: test_discover.py  test_main.py
locale/: ironic-discoverd.pot  ironic-inspector.pot
releasenotes/notes/: Inspector_rules_API_does_not_return_all_attributes-98a9765726c405d5.yaml  UUID-started_at-finished_at-in-the-status-API-7860312102923938.yaml  ability-to-turn-off-periodic-sync-5309ff2aa8a9ec14.yaml  accelerators-2aa4f0cedf359810.yaml  accept-link-local-address-1fbb9cbdc3f980bb.yaml  active-node-not-in-cache-b2d7b77603f02a66.yaml  active_states_timeout-3e3ab110870483ec.yaml  add-disabled-option-to-add-ports-f8c6c9b3e6797652.yaml  add-ibmc-43de3a7af7b5b18d.yaml  add-list-introspection-state-selector-3bbb37dd08e35d09.yaml  add-lldp-basic-plugin-98aebcf43e60931b.yaml  add-lldp-plugin-dependency-c323412654f71b3e.yaml  add-node-state-to-introspection-api-response-85fb7f4e72ae386a.yaml  add-proxy-headers-support-127f99f5ff87f03f.yaml  add-support-for-listing-all-introspection-statuses-2a3d4379c3854894.yaml  add-transition-starting-error-on-timeout-904aeeeb319ecb2b.yaml  allow-periodics-shutdown-inspector-ac28ea5ba3224279.yaml  bug-2036455-bd3f6381b78c20db.yaml  change-devstack-plugin-to-use-centos8ipa-71621f2b42554374.yaml  change_started_finished_at_type_to_datetime-c5617e598350970c.yaml  check-formatted-value-from-nonstring-3d851cb42ce3a0ac.yaml  construct-fly-free-fab62c0a5cb71fa5.yaml  cors-5f345c65da7f5c99.yaml  default-policy-file-change-a1d0a4aa19dcb37d.yaml  deprecate-d23ae14b5bd3779e.yaml  deprecate-store-data-location-037eaab9cd326646.yaml  dnsmask-pxe-filter-rootwrap-systemctl-099964ad39d38b4c.yaml  dnsmasq-pxe-filter-eoib-mac-support-7567bbc7c6bf1878.yaml  drop-py-2-7-bd0a8558f4321435.yaml  enroll-node-fields-3f4e22213fd90307.yaml  extend-rules-9a9d38701e970611.yaml  extra-check-9cf0a7d89e534ccd.yaml  (+63 more)
releasenotes/source/: 2023.1.rst  (+13 more)
rootwrap.d/: ironic-inspector-firewall.filters  ironic-inspector.filters
tools/: config-generator.conf  states_to_dot.py  test-setup.sh
zuul.d/: ironic-inspector-jobs.yaml  legacy-ironic-inspector-jobs.yaml  project.yaml
(+97 files in other folders)
