[metadata]
name = ironic-inspector
summary = Hardware introspection for OpenStack Bare Metal
description-file = README.rst
home-page = https://launchpad.net/ironic-inspector
license = Apache-2
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2

[files]
packages =
    ironic_inspector

[entry_points]
console_scripts =
    ironic-inspector = ironic_inspector.main:main
    ironic-inspector-dbsync = ironic_inspector.dbsync:main
    ironic-inspector-rootwrap = oslo_rootwrap.cmd:main
ironic_inspector.hooks.processing =
    scheduler = ironic_inspector.plugins.standard:SchedulerHook
    validate_interfaces = ironic_inspector.plugins.standard:ValidateInterfacesHook
    ramdisk_error = ironic_inspector.plugins.standard:RamdiskErrorHook
    root_disk_selection = ironic_inspector.plugins.standard:RootDiskSelectionHook
    example = ironic_inspector.plugins.example:ExampleProcessingHook
    extra_hardware = ironic_inspector.plugins.extra_hardware:ExtraHardwareHook
    raid_device = ironic_inspector.plugins.raid_device:RaidDeviceDetection
    # Deprecated name for raid_device, don't confuse with root_disk_selection
    root_device_hint = ironic_inspector.plugins.raid_device:RootDeviceHintHook
ironic_inspector.hooks.node_not_found =
    example = ironic_inspector.plugins.example:example_not_found_hook
    enroll = ironic_inspector.plugins.discovery:enroll_node_not_found_hook
ironic_inspector.rules.conditions =
    eq = ironic_inspector.plugins.rules:EqCondition
    lt = ironic_inspector.plugins.rules:LtCondition
    gt = ironic_inspector.plugins.rules:GtCondition
    le = ironic_inspector.plugins.rules:LeCondition
    ge = ironic_inspector.plugins.rules:GeCondition
    ne = ironic_inspector.plugins.rules:NeCondition
    in-net = ironic_inspector.plugins.rules:NetCondition
    matches = ironic_inspector.plugins.rules:MatchesCondition
    contains = ironic_inspector.plugins.rules:ContainsCondition
    is-empty = ironic_inspector.plugins.rules:EmptyCondition
ironic_inspector.rules.actions =
    example = ironic_inspector.plugins.example:ExampleRuleAction
    fail = ironic_inspector.plugins.rules:FailAction
    set-attribute = ironic_inspector.plugins.rules:SetAttributeAction
    set-capability = ironic_inspector.plugins.rules:SetCapabilityAction
    extend-attribute = ironic_inspector.plugins.rules:ExtendAttributeAction
oslo.config.opts =
    ironic_inspector = ironic_inspector.conf:list_opts
    ironic_inspector.common.ironic = ironic_inspector.common.ironic:list_opts
    ironic_inspector.common.swift = ironic_inspector.common.swift:list_opts
    ironic_inspector.plugins.discovery = ironic_inspector.plugins.discovery:list_opts
oslo.config.opts.defaults =
    ironic_inspector = ironic_inspector.conf:set_config_defaults

[compile_catalog]
directory = ironic_inspector/locale
domain = ironic_inspector

[update_catalog]
domain = ironic-inspector
output_dir = ironic_inspector/locale
input_file = ironic_inspector/locale/ironic_inspector.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic_inspector/locale/ironic_inspector.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
autodoc_index_modules = True
autodoc_exclude_modules =
    ironic_inspector.migrations.*
    ironic_inspector.test.*
    ironic.common.i18n
